# xsolarlogger-nng

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-arm64.cmake
etc/: config.cfg  dfconfig.cfg
include/: configuration.h  data_forwarder.h  datalog.h  error.h  influxdb_sink.h  kafka_sink.h  logger.h  message.h  mosq_sink.h  mosq_src.h  mqtt_sink.h  mqtt_src.h  nats_sink.h  redis_sink.h  sbus.h  squeue.h
src/: configuration.c  data_forwarder.c  datalog.c  http_client_nng.c  influxdb_sink.c  kafka_sink.c  logger.c  main.c  message.c  mosq_sink.c  mosq_src.c  mqtt_sink.c  mqtt_src.c  nats_sink.c  redis_sink.c  sbus.c  squeue.c
systemd/: xsolarlogger.service
